--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 This project has been contribued to by the following authors:
 This list is automatically generated - please file an issue for corrections)
 
-Chris Houseknecht <chousekn@redhat.com>
-Joshua "jag" Ginsberg <jag@flowtheory.net>
+Chris Houseknecht <chouseknecht@ansible.com>
+Joshua "jag" Ginsberg <jag@ansible.com>
